--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <base href="https://narikraus.github.io/Rogue-like-RPG/" target="_blank">
+        <!-- <base href="https://narikraus.github.io/Rogue-like-RPG/" target="_blank"> -->
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
@@ -47,6 +47,7 @@
                                 checkRoom(room);
                                 $('#title').html(window.room);
                                 $(this).replaceWith(`<div class='pixel middle h4' id='enemy'></div>`);
+
                             " id="start">
                                 <div class="h4">Start</div>
                                 <div class="h4">Game</div>
@@ -110,22 +111,22 @@
                                     <span class="info-title">Inventory</span>
                                     <div class="info-content">
                                         <span class="info-value" id="playerInventory">
-                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Leather" extraTraits='[]'>Leather</button>
-                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Plate" extraTraits='[]'>Plate</button>
-                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Spiked" extraTraits='[]'>Spiked</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Club" extraTraits='[]'>Club</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Dagger" extraTraits='[]'>Dagger</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Greatsword" extraTraits='[]'>Greatsword</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Spear" extraTraits='[]'>Spear</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Longsword" extraTraits='[]'>Longsword</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Mace" extraTraits='[]'>Mace</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Spear" extraTraits='[]'>Short Spear</button>
-                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Sword" extraTraits='[]'>Short Sword</button>
-                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Lesser Healing" extraTraits='[]'>Potion of Lesser Healing</button>
-                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Healing" extraTraits='[]'>Potion of Healing</button>
-                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Greater Healing" extraTraits='[]'>Potion of Greater Healing</button>
-                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Power" extraTraits='[]'>Potion of Power</button>
-                                            <button class="inventory-item tip" itemcatagory="Poison" itemtype="Poison" extraTraits='[]'>Poison</button>
+                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Leather" extratraits="[]">Leather</button>
+                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Plate" extratraits="[]">Plate</button>
+                                            <button class="inventory-item tip" itemcatagory="Armour" itemtype="Spiked" extratraits="[]">Spiked</button>
+                                            <button class="inventory-item tip" itemcatagory="Poison" itemtype="Poison" extratraits="[]">Poison</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Greater Healing" extratraits="[]">Potion of Greater Healing</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Healing" extratraits="[]">Potion of Healing</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Lesser Healing" extratraits="[]">Potion of Lesser Healing</button>
+                                            <button class="inventory-item tip" itemcatagory="Potion" itemtype="Potion of Power" extratraits="[]">Potion of Power</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Club" extratraits="[]">Club</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Dagger" extratraits="[]">Dagger</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Greatsword" extratraits="[]">Greatsword</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Longsword" extratraits="[]">Longsword</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Mace" extratraits="[]">Mace</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Spear" extratraits="[]">Short Spear</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Short Sword" extratraits="[]">Short Sword</button>
+                                            <button class="inventory-item tip" itemcatagory="Weapon" itemtype="Spear" extratraits="[]">Spear</button>
                                         </span>
                                     </div>
                                 </div>
@@ -155,17 +156,11 @@
                 <button class="close-log-button" onclick="$('.update-container').remove();">Close</button>
                 <pre>
 <code>
-<span class="markdown-green">30/06/2022</span>
+<span class="markdown-green">28/09/2022</span>
 
 <span class="markdown-blue"># Update Log</span>
-<span class="markdown-red">-</span> Implemented textures to the visible map.
-<span class="markdown-red">-</span> Created functions that allow for Enchantments. Yet to be implemented into gameplay.
-<span class="markdown-red">-</span> Created multiple Potions that restore health or increase damage.
-<span class="markdown-red">-</span> Added the trait 'Piercing' that halves the defending party's effective defence.
-<span class="markdown-red">-</span> Created a Log system to display what the player does and store each log for visualisation. (Click the Log Index to view)
-
-<span class="markdown-blue"># Bug Fixes</span>
-<span class="markdown-red">-</span> The 'Vampiric' trait now works as intended. 
+<span class="markdown-red">-</span> Changed the hover style when looking at an item.
+<span class="markdown-red">-</span> Added a basic 'Game Over' screen when the player's health reaches 0.
 
 <span class="markdown-blue"># Next Tasks</span>
 <span class="markdown-red">-</span> Allowing the player to get to the 2nd and 3rd levels.
@@ -173,9 +168,10 @@
 <span class="markdown-red">-</span> Give functionality to poisons.
 <span class="markdown-red">-</span> Capping the inventory to a maximum capacity yet to be decided.
 <span class="markdown-red">-</span> Prevent running from monsters.
+<span class="markdown-red">-</span> Make the full log look better.
 
 <span class="markdown-blue"># Bugs</span>
-<span class="markdown-red">-</span> Player death is not permanent.
+<span class="markdown-red">-</span> None currently known.
 
 <span class="markdown-italics">Please note that visuals do not work properly on mobile devices.</span>
 </code>
@@ -253,7 +249,7 @@
 
         <script src="assets/js/main.js"></script>
         <script src="assets/js/traits.js"></script>
-        
+
         <div class="adventure-container" style="display: none;">
             <div class="adventure-log" id="log-store" style="flex-direction: column;">
                 <button class="close-log-button" onclick="$('.adventure-container').hide();">Close</button>
