--- a/update-logs.html
+++ b/update-logs.html
@@ -19,6 +19,30 @@
         <main>
             <div class="container">
 
+<!-- 28/09/2022 -->
+<pre>
+<code>
+<span class="markdown-green">28/09/2022</span>
+
+<span class="markdown-blue"># Update Log</span>
+<span class="markdown-red">-</span> Changed the hover style when looking at an item.
+<span class="markdown-red">-</span> Added a basic 'Game Over' screen when the player's health reaches 0.
+
+<span class="markdown-blue"># Next Tasks</span>
+<span class="markdown-red">-</span> Allowing the player to get to the 2nd and 3rd levels.
+<span class="markdown-red">-</span> Creating status effects such as Poisoned, Enraged and Paralysed.
+<span class="markdown-red">-</span> Give functionality to poisons.
+<span class="markdown-red">-</span> Capping the inventory to a maximum capacity yet to be decided.
+<span class="markdown-red">-</span> Prevent running from monsters.
+<span class="markdown-red">-</span> Make the full log look better.
+
+<span class="markdown-blue"># Bugs</span>
+<span class="markdown-red">-</span> None currently known.
+
+<span class="markdown-italics">Please note that visuals do not work properly on mobile devices.</span>
+</code>
+</pre>
+
 <!-- 30/06/2022 -->
 <pre>
 <code>
